# CG-Homework

./: README.md
HW-1/: CMakeLists.txt  README.md  main.cpp
HW-2/: CMakeLists.txt  README.md  main.cpp  rasterizer.cpp  rasterizer.hpp  triangle.cpp
HW-3/: CMakeLists.txt  README.md  main.cpp  rasterizer.cpp  rasterizer.hpp  triangle.hpp
HW-4/: Makefile  README.md  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  our_gl.cpp  our_gl.h  tgaimage.cpp  tgaimage.h
HW-5/src/: main.cpp
